src/test/ui/lifetimes/lifetime-errors/ex2e-push-inference-variable-3.nll.stderr
error: lifetime may not live long enough
  --> $DIR/ex2e-push-inference-variable-3.rs:8:5
   |
LL | fn foo<'a, 'b, 'c>(x: &'a mut Vec<Ref<'b, i32>>, y: Ref<'c, i32>) {
   |            --  -- lifetime `'c` defined here
   |            |
   |            lifetime `'b` defined here
...
LL |     Vec::push(a, b);
   |     ^^^^^^^^^^^^^^^ argument requires that `'c` must outlive `'b`

error: aborting due to previous error

